--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
